--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.5.5
 cachetools==4.2.1
 certifi==2020.12.5
 chardet==4.0.0
+emoji==1.2.0
 google-api-core==1.26.1
 google-api-python-client==2.0.2
 google-auth==1.27.1
