--- a/requirements.txt
+++ b/requirements.txt
@@ -23,12 +23,14 @@ pyasn1-modules==0.2.8
 pycodestyle==2.6.0
 pylint==2.7.2
 pyparsing==2.4.7
+pytube==10.5.3
 pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
 six==1.15.0
 toml==0.10.2
+typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.26.3
 wrapt==1.12.1
